:metal: fix buttons on user_page